--- a/examples/onedata_client.yaml
+++ b/examples/onedata_client.yaml
@@ -40,8 +40,11 @@ topology_template:
                   pre_configure_source:
                     implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/onedata/oneclient_install.yml
                     inputs:
-                      onedata_token: { get_property: [ TARGET, credential, token ] }
                       onedata_location: { get_property: [ SELF, location ] }
+                      onedata_token: { get_property: [ TARGET, credential, token ] }
+                      oneprovider_host: { get_property: [ TARGET, oneprovider_host ] }
+                      dataspace: { get_property: [ TARGET, dataspace ] }
+                      onezone_endpoint: { get_property: [ TARGET, onezone_endpoint ] }
 
     my_onedata_storage:
       type: tosca.nodes.indigo.OneDataStorage
