--- a/artifacts/mesos/mesos_lb_install.yml
+++ b/artifacts/mesos/mesos_lb_install.yml
@@ -6,7 +6,7 @@
       docker_bridge_ip: "172.0.17.1"
 
     - role: indigo-dc.consul
-      consul_mode: "server"
+      consul_mode: "agent"
       docker_bridge_ip: "172.0.17.1"
       consul_servers: "{{ consul_server_ips }}"
 
