--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -769,3 +769,15 @@ node_types:
         default: powerfit
         constraints:
           - equal: powerfit
+
+  tosca.nodes.indigo.Ambertools:
+    derived_from: tosca.nodes.SoftwareComponent
+    artifacts:
+      galaxy_role:
+        file: indigo-dc.ambertools
+        type: tosca.artifacts.AnsibleGalaxy.role
+    interfaces:
+      Standard:
+        configure:
+          #implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/artifacts/ambertools/ambertools_install.yml
+          implementation: ambertools/ambertools_install.yml
