Bugfix if IM_INFRASTRUCTURE_ID is not defined

--- a/artifacts/zabbix/zabbix_agent_install.yml
+++ b/artifacts/zabbix/zabbix_agent_install.yml
@@ -1,10 +1,14 @@
 ---
 - hosts: localhost
   connection: local
+  vars:
+    hostname_prefix: "zagent."
+  pre_tasks:
+  - set_fact: hostname_prefix="{{ IM_INFRASTRUCTURE_ID }}."
+    when: IM_INFRASTRUCTURE_ID is defined
   roles:
   - role: indigo-dc.zabbix-agent
     zabbix_agent_server: "{{ zabbix_server }}"
     zabbix_agent_server_port: "{{ zabbix_server_port }}"
     zabbix_agent_metadata: "{{ zabbix_server_metadata }}"
-    # Use the IM_INFRASTRUCTURE_ID var until we have the orchestrator deployment id.
-    zabbix_agent_hostname_prefix: "{{ IM_INFRASTRUCTURE_ID }}."
+    zabbix_agent_hostname_prefix: "{{hostname_prefix}}"
