--- a/examples/galaxy_elastic_cluster.yaml
+++ b/examples/galaxy_elastic_cluster.yaml
@@ -72,7 +72,7 @@ topology_template:
             ports:
               http_port:
                 protocol: tcp
-                source: 8080
+                source: 80
         host:
           properties:
             num_cpus: { get_input: fe_cpus }
@@ -83,8 +83,7 @@ topology_template:
             type: linux 
             #distribution: scientific 
             #version: 6.6
-            # Until the orchestrator can resolve the images use the URL
-            image: one://onecloud.i3m.upv.es/256
+            #image: one://onecloud.i3m.upv.es/256
 
     wn_node:
       type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
@@ -119,12 +118,12 @@ topology_template:
             type: linux 
             #distribution: ubuntu
             #version: 14.04
-            # Until the orchestrator can resolve the images use the URL
-            image: one://onecloud.i3m.upv.es/256
+            #image: one://onecloud.i3m.upv.es/256
+
 
   outputs:
     galaxy_url:
-      value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], ':8080' ] }
+      value: { concat: [ 'http://', get_attribute: [ lrms_server, public_address, 0 ], '/galaxy' ] }
     cluster_ip:
       value: { get_attribute: [ lrms_server, public_address, 0 ] }
     cluster_creds:
