--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -356,6 +356,10 @@ node_types:
         description: URL of the orchestrator
         required: false
         default: http://orchestrator01-indigo.cloud.ba.infn.it:8080/orchestrator
+      iam_access_token:
+        type: string
+        description: INDIGO IAM access token
+        required: false
     artifacts:
       docker_agent_role:
         file: indigo-dc.clues
