--- a/examples/galaxy_elastic_cluster.yaml
+++ b/examples/galaxy_elastic_cluster.yaml
@@ -46,6 +46,7 @@ topology_template:
       type: tosca.nodes.indigo.ElasticCluster
       properties:
         deployment_id: orchestrator_deployment_id
+        iam_access_token: iam_access_token
       requirements:
         - lrms: lrms_front_end
         - wn: wn_node
@@ -79,11 +80,7 @@ topology_template:
             mem_size: { get_input: fe_mem }
         os:
           properties:
-            # host Operating System image properties
-            type: linux 
-            #distribution: scientific 
-            #version: 6.6
-            #image: one://onecloud.i3m.upv.es/256
+            image: linux-ubuntu-14.04-vmi
 
     wn_node:
       type: tosca.nodes.indigo.LRMS.WorkerNode.Slurm
@@ -114,12 +111,7 @@ topology_template:
             mem_size: { get_input: wn_mem }
         os:
           properties:
-            # host Operating System image properties
-            type: linux 
-            #distribution: ubuntu
-            #version: 14.04
-            #image: one://onecloud.i3m.upv.es/256
-
+            image: linux-ubuntu-14.04-vmi
 
   outputs:
     galaxy_url:
