Add dns_name to torque_server

--- a/examples/elastic_cluster.yaml
+++ b/examples/elastic_cluster.yaml
@@ -63,6 +63,7 @@ topology_template:
       capabilities:
         endpoint:
           properties:
+            dns_name: torqueserver
             network_name: PUBLIC
         host:
           properties:
