Add new parameters to GalaxyPortal

--- a/examples/galaxy_tosca.yaml
+++ b/examples/galaxy_tosca.yaml
@@ -17,11 +17,41 @@ topology_template:
       type: string
       description: ram memory required for the instance
       default: 1 GB
+    admin_email:
+      type: string
+      description: email of the admin user
+      default: admin@admin.com
+    admin_api_key:
+      type: string
+      description: key to access the API with admin role
+      default: not_very_secret_api_key
+    user:
+      type: string
+      description: username to launch the galaxy daemon
+      default: galaxy
+    version:
+      type: string
+      description: galaxy version to install
+      default: master
+    instance_description:
+      type: string
+      description: galaxy instance description
+      default: "INDIGO Galaxy test"
+    instance_key_pub:
+      type: string
+      description: galaxy instance ssh public key
+      default: your_ssh_public_key
  
   node_templates:
 
     galaxy:
       type: tosca.nodes.indigo.GalaxyPortal
+      properties:
+        admin_email: { get_input: admin_email }
+        admin_api_key: { get_input: admin_api_key }
+        version: { get_input: version }
+        instance_description: { get_input: instance_description }
+        instance_key_pub: { get_input: instance_key_pub }
       requirements:
         - lrms: local_lrms
 
@@ -52,7 +82,7 @@ topology_template:
             type: linux 
             distribution: centos
             version: 7
-            image: indigodatacloudapps/docker-galaxy
+            image: indigodatacloudapps/galaxy
 
   outputs:
     galaxy_url:
