--- a/examples/galaxy_tosca.yaml
+++ b/examples/galaxy_tosca.yaml
@@ -1,7 +1,7 @@
 tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
-  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/master/custom_types.yaml
+  - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/custom_types.yaml
 
 description: >
   TOSCA test for launching a Galaxy Server also configuring the bowtie2
@@ -83,6 +83,21 @@ topology_template:
             distribution: centos
             version: 7
             image: indigodatacloudapps/galaxy
+      requirements:
+        # contextually this can only be a relationship type
+        - local_storage:
+            # capability is provided by Compute Node Type
+            node: my_block_storage
+            relationship:
+              type: AttachesTo
+              properties:
+                location: /mnt/disk
+                device: hdb
+
+    my_block_storage:
+      type: BlockStorage
+      properties:
+        size: 10 GB
 
   outputs:
     galaxy_url:
