--- a/artifacts/galaxy/galaxy_install.yml
+++ b/artifacts/galaxy/galaxy_install.yml
@@ -4,3 +4,5 @@
   roles:
     - role: indigo-dc.galaxycloud
       GALAXY_VERSION: "{{ galaxy_version }}"
+      GALAXY_ADMIN_EMAIL: "{{ galaxy_admin }}"
+      GALAXY_ADMIN_API_KEY: "{{ galaxy_admin_api_key }}"
